--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/geolocation": "^3.1.0",
+    "@react-native-community/netinfo": "^11.2.1",
     "@react-native-firebase/app": "^17.4.3",
     "@react-native-firebase/messaging": "^17.4.3",
     "@react-navigation/native": "^6.1.6",
@@ -25,6 +26,7 @@
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-camera": "^4.2.1",
+    "react-native-element-dropdown": "^2.10.1",
     "react-native-floating-label-input": "^1.4.2",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-picker": "^7.0.0",
